# json2csv

./: .gitignore  Cargo.toml  LICENSE  TODO  readme.md
benchmarks/: README.md  node.sh  rust.sh
src/: convert.rs  main.rs
src/convert/: unwind_json.rs
tests/fixtures/: nested.json  sample.json
