[package]
name = "json2csv"
version = "0.1.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"
description = "A tool to convert JSON to CSV"
license = "MIT"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1"
clap = "2"
rust-flatten-json = "0.1.0"
